--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,8 @@ server {
 
     server_name         frankyya.com;
     listen 443 ssl;
-    ssl_certificate /home/g210238hwsh/frankyya_com.crt;
-    ssl_certificate_key /home/g210238hwsh/frankyya_com.key;
+    ssl_certificate /frankyya_com.crt;
+    ssl_certificate_key /frankyya_com.key;
 
 
 }
