--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,16 @@
 
+http {
+    server {
 
-server {
+        server_name frankyya.com;
+        listen 443 ssl;
+        ssl_certificate /frankyya_com.crt;
+        ssl_certificate_key /frankyya_com.key;
+        location / {
+           root   /usr/share/nginx/html;
+           index  index.html index.htm;
+       }
 
-    server_name         frankyya.com;
-    listen 443 ssl;
-    ssl_certificate /frankyya_com.crt;
-    ssl_certificate_key /frankyya_com.key;
-
-
+    }
 }
-
 
