--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ events {
 http {
     server {
 
-        server_name frankyya.com;
+        server_name cloud.frankyya.com;
         listen 443 ssl;
         ssl_certificate /frankyya_com.crt;
         ssl_certificate_key /frankyya_com.key;
